--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ footer
     .players
     {
     display: grid;
-    grid-template-columns: repeat(1,1fr);
+    grid-template-columns: 1fr;
     grid-column-gap:30px;
     grid-row-gap:27px ;
     line-height: 16px;
@@ -364,26 +364,61 @@ footer
 {
     display:block;
     align-items: center;
-    column-gap: 100px;
-    background-color: #FFFFFF;
-    margin-top: 50px;
     padding: 50px;
-    border-radius: 5px;
     width: 90%;
 }
 .highlights-matches
 {
     display: grid;
-    grid-template-columns: repeat(1,1fr);
+    grid-template-columns: 1fr;
     align-items: center;
     justify-content: center;
     width: 100%px;
-    background-color: #FFFFFF;
-    padding: 30px 20px;
-    border-radius: 5px;
 }
 .highlights-info
 {
-    width: 500px;
+    width: 90%;
+    padding: 0 200px;
+    margin: auto;
+    box-sizing: border-box;
 }
+.highlights-img img {
+
+    width: 90%;
+    margin-top: 20px;
+    padding: 10px 200px;
+    box-sizing: border-box;
+    margin-left: 50px;
+
+}
+/* latest news media query */
+ .news-box
+ {
+     grid-template-columns: 1fr;
+     width: 100%;
+ }
+ .news img {
+     width: 100%;
+ }
+ .details
+ {
+     width: 100%;
+ }
+ /* footer are query */
+
+ .footer
+ {
+     width: 70%;
+     margin: auto;
+ }
+ .footer-logo img 
+ {
+     width: 70%;
+     margin: auto;
+ }
+ .footer-icon
+ {
+     width: 70%;
+     margin: auto;
+ }
 }
