--- a/css/style.css
+++ b/css/style.css
@@ -355,70 +355,73 @@ footer
     .video-play-logo
     {
         margin-left: 10%;
+        width: 80%;
     }
     .registration-form
     {
         margin: 0;
+        padding-left: 5%;
+    
     }
     .registration-box
-{
-    display:block;
-    align-items: center;
-    padding: 50px;
-    width: 90%;
-}
-.highlights-matches
-{
-    display: grid;
-    grid-template-columns: 1fr;
-    align-items: center;
-    justify-content: center;
-    width: 100%px;
-}
-.highlights-info
-{
-    width: 90%;
-    padding: 0 200px;
-    margin: auto;
-    box-sizing: border-box;
-}
-.highlights-img img {
+    {
+        display:block;
+        align-items: center;
+        padding: 50px;
+        width: 90%;
+    }
+    .highlights-matches
+    {
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        justify-content: center;
+        width: 100%px;
+    }
+    .highlights-info
+    {
+        width: 90%;
+        padding: 0 200px;
+        margin: auto;
+        box-sizing: border-box;
+    }
+    .highlights-img img {
 
-    width: 90%;
-    margin-top: 20px;
-    padding: 10px 200px;
-    box-sizing: border-box;
-    margin-left: 50px;
+        width: 90%;
+        margin-top: 20px;
+        padding: 10px 200px;
+        box-sizing: border-box;
+        margin-left: 50px;
 
-}
+    }
 /* latest news media query */
- .news-box
- {
-     grid-template-columns: 1fr;
-     width: 100%;
- }
- .news img {
-     width: 100%;
- }
- .details
- {
-     width: 100%;
- }
- /* footer are query */
+    .news-box
+    {
+        grid-template-columns: 1fr;
+        width: 100%;
+    }
+    .news img {
+        width: 100%;
+    }
+    .details
+    {
+        width: 100%;
+    }
+    /* footer are query */
 
- .footer
- {
-     width: 70%;
-     margin: auto;
- }
- .footer-logo img 
- {
-     width: 70%;
-     margin: auto;
- }
- .footer-icon
- {
-     width: 70%;
-     margin: auto;
- }
+    .footer
+    {
+        width: 70%;
+        margin: auto;
+    }
+    .footer-logo img 
+    {
+        width: 70%;
+        margin: auto;
+    }
+    .footer-icon
+    {
+        width: 70%;
+        margin: auto;
+    }
 }
