--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@ body
     justify-content: center;
     column-gap: 50px;
     padding: 50px 0;
+    transition: transform 2s;
+}
+.container:hover img{
+    transform: rotate(30deg);
 }
 .left-header h1{
     font-size: 64px;
